# paper_cv

./: .gitignore
cpp/: CMakeCache.txt  CMakeLists.txt
cpp/src/: BmpImage.cpp  BmpImage.h  Color.cpp  Color.h  Comparator.cpp  Comparator.h  GpuProcessor.cu  GpuProcessor.h  MetalProcessor.h  MetalProcessor.mm  Tiler.cpp  Tiler.h  main.cpp
go/: go.mod  go.sum
go/cmd/icd/: main.go
go/internal/comparator/: comparator.go  config.go  cpu_comparator.go  cuda_comparator.go  device.go  file.go  unit.go  worker.go
go/internal/logger/: logger.go
python/: README.md  color_comparison.py  core.py  image_processing.py  main.py  requirements.txt  run.sh
python/utils/: comparison.py  image_processor.py
